kubernetesConfig/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend-pod
    spec:
      containers:
      - name: backend
        image: kwendim/gebeya:backend
        ports:
        - containerPort: 8080
          # imagePullPolicy: Always
      restartPolicy: Always      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: backend-pod
  type: ClusterIP
