kubernetesConfig/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend-pod
    spec:
      containers:
      - name: frontend
        image: kwendim/gebeya:frontend
        ports:
        - containerPort: 3000
        # imagePullPolicy: Always
      restartPolicy: Always      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-service
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: frontend-pod
  type: ClusterIP
